src/parser.output
Terminals unused in grammar

    T_lt


State 56 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 140 conflicts: 6 shift/reduce
State 142 conflicts: 15 shift/reduce
State 179 conflicts: 15 shift/reduce
State 180 conflicts: 15 shift/reduce
State 181 conflicts: 6 shift/reduce
State 182 conflicts: 6 shift/reduce
State 183 conflicts: 6 shift/reduce
State 184 conflicts: 15 shift/reduce
State 185 conflicts: 6 shift/reduce
State 186 conflicts: 6 shift/reduce
State 187 conflicts: 6 shift/reduce
State 188 conflicts: 6 shift/reduce
State 189 conflicts: 6 shift/reduce
State 190 conflicts: 6 shift/reduce
State 192 conflicts: 15 shift/reduce
State 194 conflicts: 15 shift/reduce
State 211 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Decl Program

    2 Program: Decl Program
    3        | %empty

    4 Decl: VariableDecl
    5     | FunctionDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type T_ident

   10 Type: T_int
   11     | T_double
   12     | T_bool
   13     | T_string
   14     | T_ident
   15     | Type '[' ']'

   16 FunctionDecl: Type T_ident '(' Formals ')' StmtBlock
   17             | T_void T_ident '(' Formals ')' StmtBlock

   18 Variables: %empty
   19          | ',' Variable Variables

   20 Formals: %empty
   21        | Variable Variables

   22 ClassDecl: T_class T_ident Extend Implements '{' Fields '}'

   23 Implements: %empty
   24           | T_implements T_ident Ids

   25 Ids: %empty
   26    | ',' T_ident Ids

   27 Extend: %empty
   28       | T_extends T_ident

   29 Fields: %empty
   30       | Field Fields

   31 Field: AccessMode VariableDecl
   32      | AccessMode FunctionDecl

   33 AccessMode: %empty
   34           | T_private
   35           | T_protected
   36           | T_public

   37 InterfaceDecl: T_interface T_ident '{' Prototypes '}'

   38 Prototypes: %empty
   39           | Prototype Prototypes

   40 Prototype: Type T_ident '(' Formals ')' ';'
   41          | T_void T_ident '(' Formals ')' ';'

   42 StmtBlock: '{' VariableDecls Stmts '}'

   43 VariableDecls: %empty
   44              | Variable ';' VariableDecls

   45 Stmts: %empty
   46      | Stmt Stmts

   47 Stmt: SExpr ';'
   48     | IfStmt
   49     | WhileStmt
   50     | ForStmt
   51     | BreakStmt
   52     | ContinueStmt
   53     | ReturnStmt
   54     | PrintStmt
   55     | StmtBlock

   56 SExpr: %empty
   57      | Expr

   58 IfStmt: T_if '(' Expr ')' Stmt SElse

   59 SElse: %empty
   60      | T_else Stmt

   61 WhileStmt: T_while '(' Expr ')' Stmt

   62 ForStmt: T_for '(' SExpr ';' Expr ';' SExpr ')' Stmt

   63 ReturnStmt: T_return SExpr ';'

   64 BreakStmt: T_break ';'

   65 ContinueStmt: T_continue ';'

   66 PrintStmt: T_Print '(' Expr CExpr ')' ';'

   67 CExpr: %empty
   68      | ',' Expr CExpr

   69 Expr: LValue '=' Expr
   70     | Constant
   71     | LValue
   72     | T_this
   73     | Call
   74     | '(' Expr ')'
   75     | Expr '+' Expr
   76     | Expr '-' Expr
   77     | Expr '*' Expr
   78     | Expr '/' Expr
   79     | Expr '%' Expr
   80     | '-' Expr
   81     | Expr '<' Expr
   82     | Expr T_lte Expr
   83     | Expr '>' Expr
   84     | Expr T_gte Expr
   85     | Expr T_equal Expr
   86     | Expr T_notEqual Expr
   87     | Expr T_and Expr
   88     | Expr T_or Expr
   89     | '!' Expr
   90     | T_ReadInteger '(' ')'
   91     | T_ReadLine '(' ')'
   92     | T_new T_ident
   93     | T_NewArray '(' Expr ',' Type ')'
   94     | T_itod '(' Expr ')'
   95     | T_dtoi '(' Expr ')'
   96     | T_itob '(' Expr ')'
   97     | T_btoi '(' Expr ')'

   98 LValue: T_ident
   99       | Expr '.' T_ident
  100       | Expr '[' Expr ']'

  101 Call: T_ident '(' Actuals ')'
  102     | Expr '.' T_ident '(' Actuals ')'

  103 Actuals: %empty
  104        | Expr CExpr

  105 Constant: T_intConstant
  106         | T_doubleConstant
  107         | T_boolConstant
  108         | T_stringConstant
  109         | T_null


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 89
    '%' (37) 79
    '(' (40) 16 17 40 41 58 61 62 66 74 90 91 93 94 95 96 97 101 102
    ')' (41) 16 17 40 41 58 61 62 66 74 90 91 93 94 95 96 97 101 102
    '*' (42) 77
    '+' (43) 75
    ',' (44) 19 26 68 93
    '-' (45) 76 80
    '.' (46) 99 102
    '/' (47) 78
    ';' (59) 8 40 41 44 47 62 63 64 65 66
    '<' (60) 81
    '=' (61) 69
    '>' (62) 83
    '[' (91) 15 100
    ']' (93) 15 100
    '{' (123) 22 37 42
    '}' (125) 22 37 42
    error (256)
    T_void (258) 17 41
    T_int (259) 10
    T_double (260) 11
    T_bool (261) 12
    T_string (262) 13
    T_class (263) 22
    T_interface (264) 37
    T_null (265) 109
    T_this (266) 72
    T_extends (267) 28
    T_implements (268) 24
    T_for (269) 62
    T_while (270) 61
    T_if (271) 58
    T_else (272) 60
    T_return (273) 63
    T_break (274) 64
    T_continue (275) 65
    T_new (276) 92
    T_NewArray (277) 93
    T_Print (278) 66
    T_ReadInteger (279) 90
    T_ReadLine (280) 91
    T_dtoi (281) 95
    T_itod (282) 94
    T_btoi (283) 97
    T_itob (284) 96
    T_private (285) 34
    T_protected (286) 35
    T_public (287) 36
    T_intConstant (288) 105
    T_doubleConstant (289) 106
    T_boolConstant (290) 107
    T_stringConstant (291) 108
    T_ident (292) 9 14 16 17 22 24 26 28 37 40 41 92 98 99 101 102
    T_or (293) 88
    T_and (294) 87
    T_equal (295) 85
    T_notEqual (296) 86
    T_gte (297) 84
    T_lte (298) 82
    T_lt (299)


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    Start (64)
        on left: 1
        on right: 0
    Program (65)
        on left: 2 3
        on right: 1 2
    Decl (66)
        on left: 4 5 6 7
        on right: 1 2
    VariableDecl (67)
        on left: 8
        on right: 4 31
    Variable (68)
        on left: 9
        on right: 8 19 21 44
    Type (69)
        on left: 10 11 12 13 14 15
        on right: 9 15 16 40 93
    FunctionDecl (70)
        on left: 16 17
        on right: 5 32
    Variables (71)
        on left: 18 19
        on right: 19 21
    Formals (72)
        on left: 20 21
        on right: 16 17 40 41
    ClassDecl (73)
        on left: 22
        on right: 6
    Implements (74)
        on left: 23 24
        on right: 22
    Ids (75)
        on left: 25 26
        on right: 24 26
    Extend (76)
        on left: 27 28
        on right: 22
    Fields (77)
        on left: 29 30
        on right: 22 30
    Field (78)
        on left: 31 32
        on right: 30
    AccessMode (79)
        on left: 33 34 35 36
        on right: 31 32
    InterfaceDecl (80)
        on left: 37
        on right: 7
    Prototypes (81)
        on left: 38 39
        on right: 37 39
    Prototype (82)
        on left: 40 41
        on right: 39
    StmtBlock (83)
        on left: 42
        on right: 16 17 55
    VariableDecls (84)
        on left: 43 44
        on right: 42 44
    Stmts (85)
        on left: 45 46
        on right: 42 46
    Stmt (86)
        on left: 47 48 49 50 51 52 53 54 55
        on right: 46 58 60 61 62
    SExpr (87)
        on left: 56 57
        on right: 47 62 63
    IfStmt (88)
        on left: 58
        on right: 48
    SElse (89)
        on left: 59 60
        on right: 58
    WhileStmt (90)
        on left: 61
        on right: 49
    ForStmt (91)
        on left: 62
        on right: 50
    ReturnStmt (92)
        on left: 63
        on right: 53
    BreakStmt (93)
        on left: 64
        on right: 51
    ContinueStmt (94)
        on left: 65
        on right: 52
    PrintStmt (95)
        on left: 66
        on right: 54
    CExpr (96)
        on left: 67 68
        on right: 66 68 104
    Expr (97)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 57 58 61 62 66 68 69 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 93 94 95 96 97 99 100 102 104
    LValue (98)
        on left: 98 99 100
        on right: 69 71
    Call (99)
        on left: 101 102
        on right: 73
    Actuals (100)
        on left: 103 104
        on right: 101 102
    Constant (101)
        on left: 105 106 107 108 109
        on right: 70


State 0

    0 $accept: . Start $end

    T_void       shift, and go to state 1
    T_int        shift, and go to state 2
    T_double     shift, and go to state 3
    T_bool       shift, and go to state 4
    T_string     shift, and go to state 5
    T_class      shift, and go to state 6
    T_interface  shift, and go to state 7
    T_ident      shift, and go to state 8

    Start          go to state 9
    Decl           go to state 10
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 1

   17 FunctionDecl: T_void . T_ident '(' Formals ')' StmtBlock

    T_ident  shift, and go to state 17


State 2

   10 Type: T_int .

    $default  reduce using rule 10 (Type)


State 3

   11 Type: T_double .

    $default  reduce using rule 11 (Type)


State 4

   12 Type: T_bool .

    $default  reduce using rule 12 (Type)


State 5

   13 Type: T_string .

    $default  reduce using rule 13 (Type)


State 6

   22 ClassDecl: T_class . T_ident Extend Implements '{' Fields '}'

    T_ident  shift, and go to state 18


State 7

   37 InterfaceDecl: T_interface . T_ident '{' Prototypes '}'

    T_ident  shift, and go to state 19


State 8

   14 Type: T_ident .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Start . $end

    $end  shift, and go to state 20


State 10

    1 Start: Decl . Program

    T_void       shift, and go to state 1
    T_int        shift, and go to state 2
    T_double     shift, and go to state 3
    T_bool       shift, and go to state 4
    T_string     shift, and go to state 5
    T_class      shift, and go to state 6
    T_interface  shift, and go to state 7
    T_ident      shift, and go to state 8

    $default  reduce using rule 3 (Program)

    Program        go to state 21
    Decl           go to state 22
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 11

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 12

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 23


State 13

    9 Variable: Type . T_ident
   15 Type: Type . '[' ']'
   16 FunctionDecl: Type . T_ident '(' Formals ')' StmtBlock

    T_ident  shift, and go to state 24
    '['      shift, and go to state 25


State 14

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


State 15

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 16

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 17

   17 FunctionDecl: T_void T_ident . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


State 18

   22 ClassDecl: T_class T_ident . Extend Implements '{' Fields '}'

    T_extends  shift, and go to state 27

    $default  reduce using rule 27 (Extend)

    Extend  go to state 28


State 19

   37 InterfaceDecl: T_interface T_ident . '{' Prototypes '}'

    '{'  shift, and go to state 29


State 20

    0 $accept: Start $end .

    $default  accept


State 21

    1 Start: Decl Program .

    $default  reduce using rule 1 (Start)


State 22

    2 Program: Decl . Program

    T_void       shift, and go to state 1
    T_int        shift, and go to state 2
    T_double     shift, and go to state 3
    T_bool       shift, and go to state 4
    T_string     shift, and go to state 5
    T_class      shift, and go to state 6
    T_interface  shift, and go to state 7
    T_ident      shift, and go to state 8

    $default  reduce using rule 3 (Program)

    Program        go to state 30
    Decl           go to state 22
    VariableDecl   go to state 11
    Variable       go to state 12
    Type           go to state 13
    FunctionDecl   go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


State 23

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 24

    9 Variable: Type T_ident .
   16 FunctionDecl: Type T_ident . '(' Formals ')' StmtBlock

    '('  shift, and go to state 31

    $default  reduce using rule 9 (Variable)


State 25

   15 Type: Type '[' . ']'

    ']'  shift, and go to state 32


State 26

   17 FunctionDecl: T_void T_ident '(' . Formals ')' StmtBlock

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 35


State 27

   28 Extend: T_extends . T_ident

    T_ident  shift, and go to state 36


State 28

   22 ClassDecl: T_class T_ident Extend . Implements '{' Fields '}'

    T_implements  shift, and go to state 37

    $default  reduce using rule 23 (Implements)

    Implements  go to state 38


State 29

   37 InterfaceDecl: T_interface T_ident '{' . Prototypes '}'

    T_void    shift, and go to state 39
    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 38 (Prototypes)

    Type        go to state 40
    Prototypes  go to state 41
    Prototype   go to state 42


State 30

    2 Program: Decl Program .

    $default  reduce using rule 2 (Program)


State 31

   16 FunctionDecl: Type T_ident '(' . Formals ')' StmtBlock

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 43


State 32

   15 Type: Type '[' ']' .

    $default  reduce using rule 15 (Type)


State 33

   21 Formals: Variable . Variables

    ','  shift, and go to state 44

    $default  reduce using rule 18 (Variables)

    Variables  go to state 45


State 34

    9 Variable: Type . T_ident
   15 Type: Type . '[' ']'

    T_ident  shift, and go to state 46
    '['      shift, and go to state 25


State 35

   17 FunctionDecl: T_void T_ident '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 47


State 36

   28 Extend: T_extends T_ident .

    $default  reduce using rule 28 (Extend)


State 37

   24 Implements: T_implements . T_ident Ids

    T_ident  shift, and go to state 48


State 38

   22 ClassDecl: T_class T_ident Extend Implements . '{' Fields '}'

    '{'  shift, and go to state 49


State 39

   41 Prototype: T_void . T_ident '(' Formals ')' ';'

    T_ident  shift, and go to state 50


State 40

   15 Type: Type . '[' ']'
   40 Prototype: Type . T_ident '(' Formals ')' ';'

    T_ident  shift, and go to state 51
    '['      shift, and go to state 25


State 41

   37 InterfaceDecl: T_interface T_ident '{' Prototypes . '}'

    '}'  shift, and go to state 52


State 42

   39 Prototypes: Prototype . Prototypes

    T_void    shift, and go to state 39
    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 38 (Prototypes)

    Type        go to state 40
    Prototypes  go to state 53
    Prototype   go to state 42


State 43

   16 FunctionDecl: Type T_ident '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 54


State 44

   19 Variables: ',' . Variable Variables

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    Variable  go to state 55
    Type      go to state 34


State 45

   21 Formals: Variable Variables .

    $default  reduce using rule 21 (Formals)


State 46

    9 Variable: Type T_ident .

    $default  reduce using rule 9 (Variable)


State 47

   17 FunctionDecl: T_void T_ident '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 56

    StmtBlock  go to state 57


State 48

   24 Implements: T_implements T_ident . Ids

    ','  shift, and go to state 58

    $default  reduce using rule 25 (Ids)

    Ids  go to state 59


State 49

   22 ClassDecl: T_class T_ident Extend Implements '{' . Fields '}'

    T_private    shift, and go to state 60
    T_protected  shift, and go to state 61
    T_public     shift, and go to state 62

    '}'       reduce using rule 29 (Fields)
    $default  reduce using rule 33 (AccessMode)

    Fields      go to state 63
    Field       go to state 64
    AccessMode  go to state 65


State 50

   41 Prototype: T_void T_ident . '(' Formals ')' ';'

    '('  shift, and go to state 66


State 51

   40 Prototype: Type T_ident . '(' Formals ')' ';'

    '('  shift, and go to state 67


State 52

   37 InterfaceDecl: T_interface T_ident '{' Prototypes '}' .

    $default  reduce using rule 37 (InterfaceDecl)


State 53

   39 Prototypes: Prototype Prototypes .

    $default  reduce using rule 39 (Prototypes)


State 54

   16 FunctionDecl: Type T_ident '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 56

    StmtBlock  go to state 68


State 55

   19 Variables: ',' Variable . Variables

    ','  shift, and go to state 44

    $default  reduce using rule 18 (Variables)

    Variables  go to state 69


State 56

   42 StmtBlock: '{' . VariableDecls Stmts '}'

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    T_ident   [reduce using rule 43 (VariableDecls)]
    $default  reduce using rule 43 (VariableDecls)

    Variable       go to state 70
    Type           go to state 34
    VariableDecls  go to state 71


State 57

   17 FunctionDecl: T_void T_ident '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FunctionDecl)


State 58

   26 Ids: ',' . T_ident Ids

    T_ident  shift, and go to state 72


State 59

   24 Implements: T_implements T_ident Ids .

    $default  reduce using rule 24 (Implements)


State 60

   34 AccessMode: T_private .

    $default  reduce using rule 34 (AccessMode)


State 61

   35 AccessMode: T_protected .

    $default  reduce using rule 35 (AccessMode)


State 62

   36 AccessMode: T_public .

    $default  reduce using rule 36 (AccessMode)


State 63

   22 ClassDecl: T_class T_ident Extend Implements '{' Fields . '}'

    '}'  shift, and go to state 73


State 64

   30 Fields: Field . Fields

    T_private    shift, and go to state 60
    T_protected  shift, and go to state 61
    T_public     shift, and go to state 62

    '}'       reduce using rule 29 (Fields)
    $default  reduce using rule 33 (AccessMode)

    Fields      go to state 74
    Field       go to state 64
    AccessMode  go to state 65


State 65

   31 Field: AccessMode . VariableDecl
   32      | AccessMode . FunctionDecl

    T_void    shift, and go to state 1
    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    VariableDecl  go to state 75
    Variable      go to state 12
    Type          go to state 13
    FunctionDecl  go to state 76


State 66

   41 Prototype: T_void T_ident '(' . Formals ')' ';'

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 77


State 67

   40 Prototype: Type T_ident '(' . Formals ')' ';'

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable  go to state 33
    Type      go to state 34
    Formals   go to state 78


State 68

   16 FunctionDecl: Type T_ident '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FunctionDecl)


State 69

   19 Variables: ',' Variable Variables .

    $default  reduce using rule 19 (Variables)


State 70

   44 VariableDecls: Variable . ';' VariableDecls

    ';'  shift, and go to state 79


State 71

   42 StmtBlock: '{' VariableDecls . Stmts '}'

    T_null            shift, and go to state 80
    T_this            shift, and go to state 81
    T_for             shift, and go to state 82
    T_while           shift, and go to state 83
    T_if              shift, and go to state 84
    T_return          shift, and go to state 85
    T_break           shift, and go to state 86
    T_continue        shift, and go to state 87
    T_new             shift, and go to state 88
    T_NewArray        shift, and go to state 89
    T_Print           shift, and go to state 90
    T_ReadInteger     shift, and go to state 91
    T_ReadLine        shift, and go to state 92
    T_dtoi            shift, and go to state 93
    T_itod            shift, and go to state 94
    T_btoi            shift, and go to state 95
    T_itob            shift, and go to state 96
    T_intConstant     shift, and go to state 97
    T_doubleConstant  shift, and go to state 98
    T_boolConstant    shift, and go to state 99
    T_stringConstant  shift, and go to state 100
    T_ident           shift, and go to state 101
    '-'               shift, and go to state 102
    '('               shift, and go to state 103
    '{'               shift, and go to state 56
    '!'               shift, and go to state 104

    ';'       reduce using rule 56 (SExpr)
    $default  reduce using rule 45 (Stmts)

    StmtBlock     go to state 105
    Stmts         go to state 106
    Stmt          go to state 107
    SExpr         go to state 108
    IfStmt        go to state 109
    WhileStmt     go to state 110
    ForStmt       go to state 111
    ReturnStmt    go to state 112
    BreakStmt     go to state 113
    ContinueStmt  go to state 114
    PrintStmt     go to state 115
    Expr          go to state 116
    LValue        go to state 117
    Call          go to state 118
    Constant      go to state 119


State 72

   26 Ids: ',' T_ident . Ids

    ','  shift, and go to state 58

    $default  reduce using rule 25 (Ids)

    Ids  go to state 120


State 73

   22 ClassDecl: T_class T_ident Extend Implements '{' Fields '}' .

    $default  reduce using rule 22 (ClassDecl)


State 74

   30 Fields: Field Fields .

    $default  reduce using rule 30 (Fields)


State 75

   31 Field: AccessMode VariableDecl .

    $default  reduce using rule 31 (Field)


State 76

   32 Field: AccessMode FunctionDecl .

    $default  reduce using rule 32 (Field)


State 77

   41 Prototype: T_void T_ident '(' Formals . ')' ';'

    ')'  shift, and go to state 121


State 78

   40 Prototype: Type T_ident '(' Formals . ')' ';'

    ')'  shift, and go to state 122


State 79

   44 VariableDecls: Variable ';' . VariableDecls

    T_int     shift, and go to state 2
    T_double  shift, and go to state 3
    T_bool    shift, and go to state 4
    T_string  shift, and go to state 5
    T_ident   shift, and go to state 8

    T_ident   [reduce using rule 43 (VariableDecls)]
    $default  reduce using rule 43 (VariableDecls)

    Variable       go to state 70
    Type           go to state 34
    VariableDecls  go to state 123


State 80

  109 Constant: T_null .

    $default  reduce using rule 109 (Constant)


State 81

   72 Expr: T_this .

    $default  reduce using rule 72 (Expr)


State 82

   62 ForStmt: T_for . '(' SExpr ';' Expr ';' SExpr ')' Stmt

    '('  shift, and go to state 124


State 83

   61 WhileStmt: T_while . '(' Expr ')' Stmt

    '('  shift, and go to state 125


State 84

   58 IfStmt: T_if . '(' Expr ')' Stmt SElse

    '('  shift, and go to state 126


State 85

   63 ReturnStmt: T_return . SExpr ';'

    T_null            shift, and go to state 80
    T_this            shift, and go to state 81
    T_new             shift, and go to state 88
    T_NewArray        shift, and go to state 89
    T_ReadInteger     shift, and go to state 91
    T_ReadLine        shift, and go to state 92
    T_dtoi            shift, and go to state 93
    T_itod            shift, and go to state 94
    T_btoi            shift, and go to state 95
    T_itob            shift, and go to state 96
    T_intConstant     shift, and go to state 97
    T_doubleConstant  shift, and go to state 98
    T_boolConstant    shift, and go to state 99
    T_stringConstant  shift, and go to state 100
    T_ident           shift, and go to state 101
    '-'               shift, and go to state 102
    '('               shift, and go to state 103
    '!'               shift, and go to state 104

    $default  reduce using rule 56 (SExpr)

    SExpr     go to state 127
    Expr      go to state 116
    LValue    go to state 117
    Call      go to state 118
    Constant  go to state 119


State 86

   64 BreakStmt: T_break . ';'

    ';'  shift, and go to state 128


State 87

   65 ContinueStmt: T_continue . ';'

    ';'  shift, and go to state 129


State 88

   92 Expr: T_new . T_ident

    T_ident  shift, and go to state 130


State 89

   93 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 131


State 90

   66 PrintStmt: T_Print . '(' Expr CExpr ')' ';'

    '('  shift, and go to state 132


State 91

   90 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 133


State 92

   91 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 134


State 93

   95 Expr: T_dtoi . '(' Expr ')'

    '('  shift, and go to state 135


State 94

   94 Expr: T_itod . '(' Expr ')'

    '('  shift, and go to state 136


State 95

   97 Expr: T_btoi . '(' Expr ')'

    '('  shift, and go to state 137


State 96

   96 Expr: T_itob . '(' Expr ')'

    '('  shift, and go to state 138


State 97

  105 Constant: T_intConstant .

    $default  reduce using rule 105 (Constant)


State 98

  106 Constant: T_doubleConstant .

    $default  reduce using rule 106 (Constant)


State 99

  107 Constant: T_boolConstant .

    $default  reduce using rule 107 (Constant)


State 100

  108 Constant: T_stringConstant .

    $default  reduce using rule 108 (Constant)


State 101

   98 LValue: T_ident .
  101 Call: T_ident . '(' Actuals ')'

    '('  shift, and go to state 139

    $default  reduce using rule 98 (LValue)


State 102

   80 Expr: '-' . Expr

    T_null            shift, and go to state 80
    T_this            shift, and go to state 81
    T_new             shift, and go to state 88
    T_NewArray        shift, and go to state 89
    T_ReadInteger     shift, and go to state 91
    T_ReadLine        shift, and go to state 92
    T_dtoi            shift, and go to state 93
    T_itod            shift, and go to state 94
    T_btoi            shift, and go to state 95
    T_itob            shift, and go to state 96
    T_intConstant     shift, and go to state 97
    T_doubleConstant  shift, and go to state 98
    T_boolConstant    shift, and go to state 99
    T_stringConstant  shift, and go to state 100
    T_ident           shift, and go to state 101
    '-'               shift, and go to state 102
    '('               shift, and go to state 103
    '!'               shift, and go to state 104

    Expr      go to state 140
    LValue    go to state 117
    Call      go to state 118
    Constant  go to state 119


State 103

   74 Expr: '(' . Expr ')'

    T_null            shift, and go to state 80
    T_this            shift, and go to state 81
    T_new             shift, and go to state 88
    T_NewArray        shift, and go to state 89
    T_ReadInteger     shift, and go to state 91
    T_ReadLine        shift, and go to state 92
    T_dtoi            shift, and go to state 93
    T_itod            shift, and go to state 94
    T_btoi            shift, and go to state 95
    T_itob            shift, and go to state 96
    T_intConstant     shift, and go to state 97
    T_doubleConstant  shift, and go to state 98
    T_boolConstant    shift, and go to state 99
    T_stringConstant  shift, and go to state 100
    T_ident           shift, and go to state 101
    '-'               shift, and go to state 102
    '('               shift, and go to state 103
    '!'               shift, and go to state 104

    Expr      go to state 141
    LValue    go to state 117
    Call      go to state 118
    Constant  go to state 119


State 104

   89 Expr: '!' . Expr
